kubernetes/ingress-namespaces-secrets-configmaps/traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-apps-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: nginx-rewrite@kubernetescrd,apache-rewrite@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: traefik-domain.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nginx-rewrite
  namespace: default
spec:
  replacePathRegex:
    regex: "^/nginx(.*)"
    replacement: "/$1"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: apache-rewrite
  namespace: default
spec:
  replacePathRegex:
    regex: "^/apache(.*)"
    replacement: "/$1"
